# claude-codex-bridge

./: .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: bridge_server.py  cache.py  engine.py
src/claude_codex_bridge/: __init__.py  __main__.py  bridge_server.py  engine.py
tests/: conftest.py  test_cache.py  test_engine.py  test_invocation_args.py  test_readonly_enforcement.py  test_readonly_mode.py
