[project]
name = "claude-codex-bridge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.63.0",
    "mcp[cli]>=1.12.4",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
]
