[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude_codex_bridge"
version = "0.1.1"
description = "An intelligent MCP server for orchestrating task delegation between Claude and OpenAI Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "xiaocang", email = "johnnywang1991@msn.com"},
]
maintainers = [
    {name = "xiaocang", email = "johnnywang1991@msn.com"},
]
keywords = ["mcp", "claude", "codex", "ai", "llm", "automation", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.63.0",
    "mcp[cli]>=1.12.4",
]

[project.scripts]
claude-codex-bridge = "claude_codex_bridge.__main__:main"

[project.urls]
Homepage = "https://github.com/xiaocang/claude-codex-bridge"
Documentation = "https://github.com/xiaocang/claude-codex-bridge#readme"
Repository = "https://github.com/xiaocang/claude-codex-bridge.git"
Issues = "https://github.com/xiaocang/claude-codex-bridge/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "autoflake>=2.3.1",
    "isort>=6.0.1",
    "ruff>=0.12.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_codex_bridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
